--- a/#source/scss/forms.scss
+++ b/#source/scss/forms.scss
@@ -13,13 +13,12 @@
 	align-items: center;
 	text-align: center;
 	padding: 3px;
-	width: 164px;
-	height: 37px;
+	width: 132px;
+	height: 35px;
 	font-family: 'Lato';
-	font-weight: 400;
-	font-size: 22px;
+	font-size: 15px;
 	color: #fff;
-	background: #0070bf;
+	background: #C4041C;
 	border-radius: 35px;
 	&:hover{}
 	&.fw{width: 100%;}  
